cabal-version: 3.0
name: hasql-postgresql-types
version: 0.1
category: PostgreSQL, Codecs, Hasql
synopsis: Integration of "hasql" with "postgresql-types"
description:
  Provides automatic encoder and decoder generation for ["hasql"](https://hackage.haskell.org/package/hasql),
  supporting all PostgreSQL standard types defined in the ["postgresql-types"](https://hackage.haskell.org/package/postgresql-types) package.

homepage: https://github.com/nikita-volkov/hasql-postgresql-types
bug-reports: https://github.com/nikita-volkov/hasql-postgresql-types/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2026, Nikita Volkov
license: MIT
license-file: LICENSE
extra-doc-files:
  LICENSE
  README.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/hasql-postgresql-types

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src/library
  exposed-modules:
    Hasql.PostgresqlTypes

  build-depends:
    base >=4.11 && <5,
    hasql ^>=1.10.1,
    postgresql-types-algebra ^>=0.1,
    ptr-peeker ^>=0.1.0.1,
    ptr-poker ^>=0.1.3,
    tagged ^>=0.8.9,
    text-builder ^>=1.0.0.4,
